@@ -910,6 +910,7 @@ job_manager(slurmd_job_t *job)
 	 */
 	if(!conf->job_acct_gather_freq)
 		jobacct_gather_g_stat_task(0);
+
 	/* Send job launch response with list of pids */
 	_send_launch_resp(job, 0);
 
