@@ -7,6 +7,8 @@ documents those changes that are of interest to users and admins.
     nodes (Shared=YES or Shared=FORCE).
  -- Fix for handling -N and --ntasks-per-node without specifying -n with
     salloc and sbatch.
+ -- Fix jobacct_gather/linux if not polling on tasks to give tasks time to
+    start before doing initial gather.
 
 * Changes in SLURM 2.1.8
 ========================
